fix: remove word wrapping if nickname contains spaces

--- a/src/components/UI/Dropdown/Dropdown.module.scss
+++ b/src/components/UI/Dropdown/Dropdown.module.scss
@@ -16,6 +16,10 @@
   cursor: pointer;
 }
 
+.username {
+  white-space: nowrap;
+}
+
 .dropdown {
   left: -20px;
   top: 25px;
